# mini-haskell

./: .gitignore  Cargo.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/mini_haskell_cli/: Cargo.toml
crates/mini_haskell_cli/src/: main.rs
crates/mini_haskell_diagnostic/: Cargo.toml
crates/mini_haskell_diagnostic/snapshots/reporter/output/: simple_err.snap
crates/mini_haskell_diagnostic/snapshots/tester/output/: simple_diagnose.snap
crates/mini_haskell_diagnostic/src/: diagnostic.rs  lib.rs  report.rs  reporter.rs  span.rs  tester.rs
crates/mini_haskell_lexer/: Cargo.toml
crates/mini_haskell_lexer/snapshots/diagnostic/input/: invalid_token.hs
crates/mini_haskell_lexer/snapshots/diagnostic/output/: invalid_token.snap
crates/mini_haskell_lexer/snapshots/lexer/input/: all_tokens.hs
crates/mini_haskell_lexer/snapshots/lexer/output/: all_tokens.snap  invalid_token.snap
crates/mini_haskell_lexer/src/: diagnostic.rs  error.rs  lexer.rs  lib.rs
crates/mini_haskell_parser/: Cargo.toml
crates/mini_haskell_parser/snapshots/diagnostic/input/: unexpected_expression.hs  unexpected_token.hs
crates/mini_haskell_parser/snapshots/diagnostic/output/: unexpected_expression.snap  unexpected_token.snap
crates/mini_haskell_parser/snapshots/fmt/output/: expr.snap
crates/mini_haskell_parser/snapshots/parser/input/: advance.hs  comparison.hs  conditional.hs  primary.hs
crates/mini_haskell_parser/snapshots/parser/output/: addition.snap  advance.snap  comparison.snap  conditional.snap  consume.snap  logical.snap  primary.snap
crates/mini_haskell_parser/src/: ast.rs  diagnostic.rs  error.rs  fmt.rs  lib.rs  parser.rs
crates/testsuite/: Cargo.toml
crates/testsuite/src/: lib.rs  macros.rs
crates/testsuite/src/unittest/: tester.rs
crates/testsuite_macros/: Cargo.toml
