[workspace]
members = ["crates/*"]

#[package]
#name = "mini-haskell"
#version = "0.1.0"
#edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
mini_haskell_lexer = { version = "0.1.0", path = "crates/mini_haskell_lexer" }
testsuite = { version = "0.1.0", path = "crates/testsuite" }
testsuite_macros = { version = "0.1.0", path = "crates/testsuite_macros" }
insta = { version = "1.33.0", features = ["glob"] }
thiserror = "1.0.49"
