[package]
name = "mini_haskell_diagnostic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
logos = "0.14.0"
insta = { workspace = true, features = ["glob"] }
miette = { workspace = true, features = ["fancy"] }
testsuite = { path = "../testsuite" }

[dev-dependencies]
thiserror = { workspace = true }