[package]
name = "mini_haskell_lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
insta = { workspace = true, features = ["glob"] }
thiserror = { workspace = true }
mini_haskell_diagnostic = { path = "../mini_haskell_diagnostic" }
testsuite = { path = "../testsuite" }
testsuite_macros = { path = "../testsuite_macros" }
miette = { workspace = true, features = ["fancy"] }
